@@ -18,6 +18,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc2459.suite',
      'tests.test_rfc2511.suite',
      'tests.test_rfc2560.suite',
+     'tests.test_rfc2631.suite',
      'tests.test_rfc2634.suite',
      'tests.test_rfc2985.suite',
      'tests.test_rfc2986.suite',
