@@ -26,6 +26,7 @@ Revision 0.2.8, released XX-XX-2019
 - Added RFC5916 providing Device Owner Attribute
 - Update RFC8226 to use ComponentPresentConstraint() instead of the
   previous work around
+- Add RFC2631 providing OtherInfo for Diffie-Hellman Key Agreement
 
 Revision 0.2.7, released 09-10-2019
 -----------------------------------
